[gd_scene load_steps=12 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/Menus/MenuFinal.gd" type="Script" id=2]
[ext_resource path="res://recursos/audio/sfx/select_1.wav" type="AudioStream" id=3]
[ext_resource path="res://recursos/audio/musica/Musica Presentacion/POL-building-the-future-short.tres" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://recursos/Fonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0352941, 0.0196078, 0.0196078, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "victoria"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.1, 3.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0352941, 0.0196078, 0.0196078, 1 ), Color( 0, 1, 0.576471, 1 ), Color( 0.615686, 0, 1, 1 ), Color( 1, 0.913725, 0, 1 ), Color( 0.0352941, 0.0196078, 0.0196078, 1 ) ]
}

[node name="MenuFinal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 299.0
margin_top = 129.0
margin_right = 658.0
margin_bottom = 198.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 21.0
color = Color( 0.0352941, 0.0196078, 0.0196078, 1 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Gameover"
align = 1
valign = 1

[node name="PanelPuntaje" type="Panel" parent="."]
margin_left = 302.0
margin_top = 261.0
margin_right = 661.0
margin_bottom = 330.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="PanelPuntaje"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0196078, 0.0196078, 1 )

[node name="Label" type="Label" parent="PanelPuntaje"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 8 )
text = "Puntaje total: "
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = 80.0
margin_right = 121.0
margin_bottom = 209.0

[node name="BotonNuevo" type="Button" parent="VBoxContainer"]
margin_right = 242.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "nuevo"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 242.0
margin_bottom = 54.0

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 242.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 5 )
text = "salir"

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Musica"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "victoria"
anims/RESET = SubResource( 9 )
anims/victoria = SubResource( 10 )

[connection signal="pressed" from="VBoxContainer/BotonNuevo" to="." method="_on_BotonNuevo_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
